--- a/CLRS/notes/tex-docs/notes.tex
+++ b/CLRS/notes/tex-docs/notes.tex
@@ -28,7 +28,7 @@
     % identifierstyle=\color{red},
     language=Python, }
 
-% latex + dvipdfmx 编译方式要在 tikz 宏包之前调用 graphicx 宏包并指定 dvipdfmx 选项。
+% latex + dvipdfmx 编译方式要在 tikz 宏包之前调用 graphicx 宏包并指定 dvipdfmx 选项. 
 \usepackage{graphicx}
 \usepackage{tikz}
 
@@ -49,45 +49,37 @@
 \chapter{算法在计算中的作用}
 %第1.1节
 \section{算法}
-\textbf{算法}(algorithm)就是任何良定义的计算过程，该过程取某个值或值的集合作为\textbf{输入}并产生某个值或值的集合作为\textbf{输出}。这样算法就是把输入转换成输出的计算步骤的一个序列。
+\textbf{算法}(algorithm)就是任何良定义的计算过程, 该过程取某个值或值的集合作为\textbf{输入}并产生某个值或值的集合作为\textbf{输出}. 这样算法就是把输入转换成输出的计算步骤的一个序列.
 
 \subsection*{练习}
 \begin{enumerate}
     \renewcommand{\labelenumi}{\thesection-\theenumi}
-    \item {\textbf{给出现实生活中需要排序的一个例子或者现实生活中需要计算凸壳的例子。}\\需要排序的例子为：展示排行榜、微博热搜榜单等。需要计算凸壳(凸包)的例子：割平面法求解线性整数规划问题。}
-    \item {\textbf{除速度外，在真实环境中还可能使用哪些其它有关效率的量度？}\\计算步骤的复杂性、计算过程所需的内存空间大小等。}
-    \item {\textbf{选择一种你以前已知的数据结构，并讨论其优势和局限。}\\以数组为例。优势：结构简单，容易实现。局限：删除元素效率低下。}
-    \item {\textbf{前面给出的最短路径与旅行商问题有哪些相似之处？又有哪些不同？}\\相似之处：都属于图论中的问题，且优化目标均为最小化总距离。不同点：受到的约束不同，最短路径问题不需要遍历每一个节点。}
-    \item {\textbf{提供一个现实生活的问题，其中只有最佳解才行。然后提供一个问题，其中近似最佳的解也足够好。}\\必须找到最佳解的问题：找到班级中身高最高的同学。近似最佳的解也足够好的问题：装机时，找到一个比总用电功率大的任意一个电源。}
+    \item {\textbf{给出现实生活中需要排序的一个例子或者现实生活中需要计算凸壳的例子. }\\需要排序的例子为: 展示排行榜, 微博热搜榜单等. 需要计算凸壳(凸包)的例子: 割平面法求解线性整数规划问题. }
+    \item {\textbf{除速度外, 在真实环境中还可能使用哪些其它有关效率的量度? }\\计算步骤的复杂性, 计算过程所需的内存空间大小等. }
+    \item {\textbf{选择一种你以前已知的数据结构, 并讨论其优势和局限. }\\以数组为例. 优势: 结构简单, 容易实现. 局限: 删除元素效率低下. }
+    \item {\textbf{前面给出的最短路径与旅行商问题有哪些相似之处? 又有哪些不同? }\\相似之处: 都属于图论中的问题, 且优化目标均为最小化总距离. 不同点: 受到的约束不同, 最短路径问题不需要遍历每一个节点. }
+    \item {\textbf{提供一个现实生活的问题, 其中只有最佳解才行. 然后提供一个问题, 其中近似最佳的解也足够好. }\\必须找到最佳解的问题: 找到班级中身高最高的同学. 近似最佳的解也足够好的问题: 装机时, 找到一个比总用电功率大的任意一个电源. }
 \end{enumerate}
 
 %第1.2节
 \section{作为一种技术的算法}
-算法的效率主要体现在时间和空间这两个方面，因为计算机不可能是无限快的，存储空间也不是免费的。
+算法的效率主要体现在时间和空间这两个方面, 因为计算机不可能是无限快的, 存储空间也不是免费的.
 
 \subsection*{练习}
 \begin{enumerate}
     \renewcommand{\labelenumi}{\thesection-\theenumi}
-    \item {\textbf{给出在应用层需要算法内容的应用的一个例子，并讨论涉及的算法的功能。}\\加载包含大量图片的网页时，图片的加载顺序问题。算法应当首先加载用户最先看到的图片。}
-    \item {\textbf{假设我们正比较插入排序与归并排序在相同机器上的实现。对规模为$n$的输入，插入排序运行$8n^2$步，而归并排序运行$64n\lg{n}$步。问对哪些$n$值，插入排序优于归并排序？}\\若需插入排序优于归并排序，则需$n$满足不等式：$8n^2 \le 64n\lg{n}$。解得：$2 \leq n \leq 43$。}
-    \item {\textbf{$n$的最小值为何值时，运行时间为$100n^2$的一个算法在相同机器上快于运行时间为$2^n$的另一个算法？}\\原问题等价于求解满足不等式：$100n^2 \le 2^n$的最小的$n$。解得：$n \geq 15$。}
+    \item {\textbf{给出在应用层需要算法内容的应用的一个例子, 并讨论涉及的算法的功能. }\\加载包含大量图片的网页时, 图片的加载顺序问题. 算法应当首先加载用户最先看到的图片. }
+    \item {\textbf{假设我们正比较插入排序与归并排序在相同机器上的实现. 对规模为$n$的输入, 插入排序运行$8n^2$步, 而归并排序运行$64n\lg{n}$步. 问对哪些$n$值, 插入排序优于归并排序? }\\若需插入排序优于归并排序, 则需$n$满足不等式: $8n^2 \le 64n\lg{n}$. 解得: $2 \leq n \leq 43$. }
+    \item {\textbf{$n$的最小值为何值时, 运行时间为$100n^2$的一个算法在相同机器上快于运行时间为$2^n$的另一个算法? }\\原问题等价于求解满足不等式: $100n^2 \le 2^n$的最小的$n$. 解得: $n \geq 15$. }
 \end{enumerate}
-
-% \subsection*{解答}
-% \begin{enumerate}
-%     \renewcommand{\labelenumi}{\thesection-\theenumi}
-%     \item 加载包含大量图片的网页时，图片的加载顺序问题。算法应当首先加载用户最先看到的图片。
-%     \item 若需插入排序优于归并排序，则需$n$满足不等式：$8n^2 \le 64n\lg{n}$。解得：$2 \leq n \leq 43$。
-%     \item 原问题等价于求解满足不等式：$100n^2 \le 2^n$的最小的$n$。解得：$n \geq 15$。
-% \end{enumerate}
 
 %思考题
 \section{思考题}
 \begin{enumerate}
     \renewcommand{\labelenumi}{\thechapter-\theenumi}
     \item {
-          \textbf{(运行时间的比较)假设求解问题的算法需要$f(n)$毫秒，对下表中的每个函数$f(n)$和时间$t$，确定可以在时间$t$内求解的问题的最大规模$n$。}\\
-          基本的计算思路是求解满足不等式：$f(n) \leq t$的最大的$n$。求解结果如下表所示：
+          \textbf{(运行时间的比较)假设求解问题的算法需要$f(n)$毫秒, 对下表中的每个函数$f(n)$和时间$t$, 确定可以在时间$t$内求解的问题的最大规模$n$. }\\
+          基本的计算思路是求解满足不等式: $f(n) \leq t$的最大的$n$. 求解结果如下表所示:
           \begin{table}[H]
               \centering
               \begin{tabularx}{\textwidth}
@@ -112,7 +104,7 @@
 %第1节
 \section{插入排序}
 \subsection*{插入排序}
-插入排序的算法描述为：
+插入排序的算法描述为:
 \begin{codebox}
     \Procname{$\proc{Insertion-Sort}(A)$}
     \li \For $j \gets 2$ \To $\attrib{A}{length}$
@@ -130,7 +122,7 @@
     \End
 \end{codebox}
 
-以数组$A=\langle 5,2,4,6,1,3 \rangle$为例，该数组的初始状态如图\ref{数组A插入排序前的初始状态}所示。对该数组进行非降序的排列后，其状态应该如图\ref{数组A插入排序后的终止状态}所示。
+以数组$A=[5,2,4,6,1,3]$为例, 该数组的初始状态如图\ref{数组A插入排序前的初始状态}所示. 对该数组进行非降序的排列后, 其状态应该如图\ref{数组A插入排序后的终止状态}所示.
 
 \begin{figure}[H]
     \centering
@@ -171,7 +163,7 @@
     \end{minipage}
 \end{figure}
 
-采用插入排序的算法流程可以用图\ref{数组$A$的插入排序流程}进行表示：
+采用插入排序的算法流程可以用图\ref{数组$A$的插入排序流程}进行表示:
 
 \begin{figure}[H]
     \centering
@@ -357,44 +349,29 @@
 \end{figure}
 
 \subsection*{循环不变式}
-循环不变式主要用来帮助我们理解算法的正确性。关于循环不变式，我们必须证明三条性质：
+循环不变式主要用来帮助我们理解算法的正确性. 关于循环不变式, 我们必须证明三条性质:
 
-\textbf{初始化：}循环的第一次迭代之前，它为真。
+\textbf{初始化: }循环的第一次迭代之前, 它为真.
 
-\textbf{保持：}如果循环的某次迭代之前它为真，那么下次迭代之前它仍为真。
+\textbf{保持: }如果循环的某次迭代之前它为真, 那么下次迭代之前它仍为真.
 
-\textbf{终止：}在循环终止时，不变式为我们提供一个有用的性质，该性质有助于证明算法是正确的。
+\textbf{终止: }在循环终止时, 不变式为我们提供一个有用的性质, 该性质有助于证明算法是正确的.
 
-对于插入排序的例子而言，循环不变式三个性质的证明如下：
+对于插入排序的例子而言, 循环不变式三个性质的证明如下:
 
-\textbf{初始化：}首先证明在第一次循环迭代前（$j=2$），循环不变式成立。此时的子数组$A[1..j-1]$仅仅包含1个元素，即$A[1]$。显然，该子数组是有序的。
+\textbf{初始化: }首先证明在第一次循环迭代前($j=2$), 循环不变式成立. 此时的子数组$A[1..j-1]$仅仅包含1个元素, 即$A[1]$. 显然, 该子数组是有序的.
 
-\textbf{保持：}在某次迭代前，若子数组$A[1..j-1]$是有序的，则将第$j$个元素$A[j]$插入到子数组中正确的位置上（假设为位置$i$）后，子数组中原来的第$i$到$j-1$的元素依次向后移动一个位置占据$i+1$到$j$的位置。在下次迭代前，变量$j$加一后，子数组仍然是有序的，仍然为真。
+\textbf{保持: }在某次迭代前, 若子数组$A[1..j-1]$是有序的, 则将第$j$个元素$A[j]$插入到子数组中正确的位置上(假设为位置$i$)后, 子数组中原来的第$i$到$j-1$的元素依次向后移动一个位置占据$i+1$到$j$的位置. 在下次迭代前, 变量$j$加一后, 子数组仍然是有序的, 仍然为真.
 
-\textbf{终止：}算法终止是由于$j$大于数组$A$的长度$n$，且由于$j$是整数，此时有$j=n+1$。那么根据前两条性质可知，此时子数组$A[1..j-1]$是有序的，而子数组$A[1..j-1]$恰好为排序后的原数组。
+\textbf{终止: }算法终止是由于$j$大于数组$A$的长度$n$, 且由于$j$是整数, 此时有$j=n+1$. 那么根据前两条性质可知, 此时子数组$A[1..j-1]$是有序的, 而子数组$A[1..j-1]$恰好为排序后的原数组.
 
 \subsection*{练习}
 \begin{enumerate}
     \renewcommand{\labelenumi}{\thesection-\theenumi}
-    \item 以图2-2为模型，说明INSERTION-SORT在数组$A=\langle 31,41,59,26,41,58 \rangle$上的执行过程。
-    \item 重写过程INSERTION-SORT，使之按非升序（而不是非降序）排列。
     \item {
-          考虑以下\textbf{查找问题}：
-
-          \textbf{输入：}$n$个数的一个序列$A=\langle a_{1},a_{2},\dots,a_{n} \rangle$和一个值$v$。
-
-          \textbf{输出：}下标$i$使得$v=A[i]$或者当$v$不在$A$中出现时，$v$为特殊值NIL。
-
-          写出\textbf{线性查找}的伪代码，它扫描整个序列来查找$v$。使用一个循环不变式来证明你的算法是正确的。确保你的循环不变式满足三条必要的性质。
-          }
-    \item 考虑把两个$n$位二进制整数加起来的问题，这两个整数分别存储在两个$n$元数组$A$和$B$中。这两个整数的和应按二进制形式存储在一个$(n+1)$元数组$C$中。请给出该问题的形式化描述，并写出伪代码。
-\end{enumerate}
-
-\subsection*{解答}
-\begin{enumerate}
-    \renewcommand{\labelenumi}{\thesection-\theenumi}
-    \item {
-          执行过程如图\ref{练习221}所示：
+          以图2-2为模型, 说明INSERTION-SORT在数组$A=[31,41,59,26,41,58]$上的执行过程.\\
+          解答: \\
+          执行过程如图\ref{练习221}所示:
           \begin{figure}[H]
               \centering
               \begin{tikzpicture}
@@ -571,11 +548,13 @@
                   \draw [-stealth] (5.5,-8) to[bend left=60] (4,-8);
                   \draw [->] (E.east) -- (F.west);
               \end{tikzpicture}
-              \caption{数组$A=\langle 31,41,59,26,41,58 \rangle$的插入排序执行过程}\label{练习221}
+              \caption{数组$A=[31,41,59,26,41,58]$的插入排序执行过程}\label{练习221}
           \end{figure}
           }
     \item {
-          非升序版本的伪代码如下：
+          重写过程INSERTION-SORT, 使之按非升序(而不是非降序)排列.\\
+          解答: \\
+          非升序版本的伪代码如下:
           \begin{codebox}
               \Procname{$\proc{Insertion-Sort}(A)$}
               \li \For $j \gets 2$ \To $\attrib{A}{length}$
@@ -592,12 +571,16 @@
               \li $A[i+1] \gets \id{key}$
               \End
           \end{codebox}
-
-          非升序版本和非降序版本的主要差别在于将$A[j]$插入已排序的序列$A[1 \twodots j-1]$这一步。非升序版本的Python实现为：
+          非升序版本和非降序版本的主要差别在于将$A[j]$插入已排序的序列$A[1 \twodots j-1]$这一步. 非升序版本的Python实现为:
           \lstinputlisting{./other-codes/exercise_2_1_2.py}
           }
     \item {
-          线性查找的算法描述为：
+          考虑以下\textbf{查找问题}:\\
+          \textbf{输入: }$n$个数的一个序列$A=\langle a_{1},a_{2},\dots,a_{n} \rangle$和一个值$v$.\\
+          \textbf{输出: }下标$i$使得$v=A[i]$或者当$v$不在$A$中出现时, $v$为特殊值NIL.\\
+          写出\textbf{线性查找}的伪代码, 它扫描整个序列来查找$v$. 使用一个循环不变式来证明你的算法是正确的. 确保你的循环不变式满足三条必要的性质.\\
+          解答: \\
+          线性查找的算法描述为:
           \begin{codebox}
               \Procname{$\proc{Linear-Search}(A,v)$}
               \li \For $i \gets 1$ \To $\attrib{A}{length}$
@@ -609,20 +592,22 @@
               \li \Return \const{NIL}
           \end{codebox}
 
-          其Python实现为：
+          其Python实现为:
 
           \lstinputlisting{./other-codes/exercise_2_1_3.py}
 
-          循环不变式的证明如下：
+          循环不变式的证明如下:
 
-          \textbf{初始化：}在循环迭代开始之前，相当于没有遍历过任何元素，自然不可能找到目标元素$v$，所以函数不会return，循环必定可以开始。
+          \textbf{初始化: }在循环迭代开始之前, 相当于没有遍历过任何元素, 自然不可能找到目标元素$v$, 所以函数不会return, 循环必定可以开始.
 
-          \textbf{保持：}若循环能进行下去，则意味着在子数组$A[1..i-1]$内没有找到目标元素$v$，因此需要考察第$i$个元素。在考察完第$i$个元素之后，“在子数组$A[1..i-1]$内没有找到目标元素$v$”这一命题仍然为真。
+          \textbf{保持: }若循环能进行下去, 则意味着在子数组$A[1..i-1]$内没有找到目标元素$v$, 因此需要考察第$i$个元素. 在考察完第$i$个元素之后, “在子数组$A[1..i-1]$内没有找到目标元素$v$”这一命题仍然为真.
 
-          \textbf{终止：}一种情况是，当考察到第$i$个元素时，若$A[i]$等于$v$，则意味着已经找到目标元素，直接返回$i$。另一种情况是，循环迭代的终止是由于$i$大于数组$A$的长度$n$，此时$i=n+1$。那么根据前两条性质可知，子数组$A[1..i-1]$内没有找到目标元素$v$。此时的子数组恰好是原问题数组，意味着数组$A$内不存在目标元素$v$，故返回NIL。
+          \textbf{终止: }一种情况是, 当考察到第$i$个元素时, 若$A[i]$等于$v$, 则意味着已经找到目标元素, 直接返回$i$. 另一种情况是, 循环迭代的终止是由于$i$大于数组$A$的长度$n$, 此时$i=n+1$. 那么根据前两条性质可知, 子数组$A[1..i-1]$内没有找到目标元素$v$. 此时的子数组恰好是原问题数组, 意味着数组$A$内不存在目标元素$v$, 故返回NIL.
           }
     \item {
-          算法描述为：
+          考虑把两个$n$位二进制整数加起来的问题, 这两个整数分别存储在两个$n$元数组$A$和$B$中. 这两个整数的和应按二进制形式存储在一个$(n+1)$元数组$C$中. 请给出该问题的形式化描述, 并写出伪代码.\\
+          解答: \\
+          算法描述为:
           \begin{codebox}
               \Procname{$\proc{Add-Binary}(A,B)$}
               \li $int[n+1] \id{C} \gets \{0,\twodots,0\}$ \RComment $n=\attrib{A}{length}$
@@ -644,34 +629,40 @@
               \li $C[1] \gets \id{val}$
               \li \Return $\id{C}$
           \end{codebox}
-
-          Python实现为：
-
           }
 \end{enumerate}
 
 %第2节
 \section{分析算法}
 
-%第3节
-\section{设计算法}
-\subsection{分治法}
+\subsection*{最坏情况与平均情况分析}
 
-\subsection{分析分治算法}
+对于插入排序, 最好情况下, $T(n)=an+b$, 最坏情况下, $T(n)=an^2+bn+c$.
 
-%%%%%分割线%%%
+我们往往集中于只求\textbf{最坏情况运行时间}, 即对规模为$n$的任何输入, 算法的最长运行时间, 这样做的三点理由:
+\begin{itemize}
+    \item 一个算法的最坏情况运行时间给出了任何输入的运行时间的一个上界. 知道了这个界, 就能确保该算法绝不需要更长的时间. 我们不必对运行时间做某种复杂的猜测并可以期望它不会变得更坏.
+    \item 对某些算法, 最坏情况经常出现. 例如, 当在数据库中检索一条特定的信息时, 若该信息不在数据库中出现, 则检索算法的最坏情况会经常出现. 在某些应用中, 对缺失信息的检索可能是频繁的.
+    \item “平均情况”往往与最坏的情况大致一样差. 假定随机选择$n$个数并应用插入排序. 需要多长时间来确定在子数组$A[1..j-1]$的什么位置插入元素$A[j]$? 平坤来说, $A[1..j-1]$中的一半元素小于$A[j]$, 一半元素大于$A[j]$. 所以, 平均来说, 我们检查子数组$A[1..j-1]$的一半, 那么$t_{j}$大约为$j/2$. 导致的平均情况运行时间结果像最坏情况运行时间一样, 也是输入规模的一个二次函数.
+\end{itemize}
+
+在某些特定的情况下, 我们会对一个算法的\textbf{平均情况}运行时间感兴趣; 贯穿于本书, 我们将看到\textbf{概率分析}技术被用于各种算法. 平均情况分析的范围有限, 因为对于特定的问题, 什么构成一种“平均”输入并不明显. 我们常常假定给定规模的所有输入具有相同的可能性. 实际上, 该假设可能不成立, 但是, 有时可以使用\textbf{随机化算法}, 它做出一些随机的选择, 以允许进行概率分析并产生某个\textbf{期望}的运行时间. 在第5章以及后续的其它几章中, 我们将进一步探究随机化算法.
+
+\subsection*{增长量级}
+
+
 
 \subsection*{练习2.2-1}
 \subsubsection*{题目}
-用$\Theta$记号表示函数$n^3/1000-100n^2-100n+3$。
+用$\Theta$记号表示函数$n^3/1000-100n^2-100n+3$.
 \subsubsection*{解答}
 $\Theta(n^3)$
 
 \subsection*{练习2.2-2}
 \subsubsection*{题目}
-考虑排序存储在数组A中的$n$个数：首先找出A中的最小元素并将其与$A[1]$中的元素进行交换。接着，找出$A$中的次最小元素并将其与$A[2]$中的元素进行交换。对$A$中前$n-1$个元素按该方式继续。该算法称为\textbf{选择算法}，写出其伪代码。该算法维持的循环不变式是什么？为什么它只需要对前$n-1$个元素，而不是对所有$n$个元素运行？用$\Theta$记号给出选择排序的最好情况与最坏情况的运行时间。
+考虑排序存储在数组A中的$n$个数: 首先找出A中的最小元素并将其与$A[1]$中的元素进行交换. 接着, 找出$A$中的次最小元素并将其与$A[2]$中的元素进行交换. 对$A$中前$n-1$个元素按该方式继续. 该算法称为\textbf{选择算法}, 写出其伪代码. 该算法维持的循环不变式是什么? 为什么它只需要对前$n-1$个元素, 而不是对所有$n$个元素运行? 用$\Theta$记号给出选择排序的最好情况与最坏情况的运行时间.
 \subsubsection*{解答}
-选择排序的伪代码为：
+选择排序的伪代码为:
 \begin{codebox}
     \Procname{$\proc{Selection-Sort}(A)$}
     \li \For $i \gets 1$ \To $\attrib{A}{length} - 1$ \Do
@@ -686,5 +677,15 @@ $\Theta(n^3)$
     \li     $A[minIndex] \gets temp$
     \End
 \end{codebox}
+
+%第3节
+\section{设计算法}
+\subsection{分治法}
+
+\subsection{分析分治算法}
+
+%%%%%分割线%%%
+
+
 
 \end{document}
